trunk/Archive2/af/888b8fccd0ba0c/output
main.cpp:11:10: error: member reference base type 'int' is not a structure or union
        x.a;
        ~^~
main.cpp:18:5: note: in instantiation of function template specialization 'test<int>' requested here
    test(0);
    ^
1 error generated.
