trunk/Archive2/af/888b8fccd0ba0c/main.cpp
struct Foo
{
    int a;
};

template<typename T>
void test(T x)
{
    [&](auto)
    {
        x.a;
    };
}

int main()
{
    test(Foo{0});
    test(0);
}